--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Abhishek - A learner and developer</title>
+        <title> Abhishek - a learner, designer & developer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="robots" content="index, follow"/>
         <meta name="keywords" content="Abhishek Kumar Gupta, Web Developer, Web Designer, Microsoft Student Partner, Xamarin Student Ambassador,Directi Campus Ambassador, Scrollback Campus Buddy, Firefox Student Ambassador, Microsoft Student Associate, President, Microsoft Students' Club, PES"/>
@@ -57,9 +57,9 @@
                         <div class="nav-footer">
                             <div class="nav-social">
                                 <ul>
-                                    <li><a href="http://www.facebook.com/abhi.ise"  target="_blank" class="transition"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="http://www.facebook.com/abhiguptame"  target="_blank" class="transition"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="http://www.twitter.com/abhiguptame"  target="_blank" class="transition"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="http://in.linkedin.com/in/iabhigupta"  target="_blank" class="transition"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="http://in.linkedin.com/in/abhiguptame"  target="_blank" class="transition"><i class="fa fa-linkedin"></i></a></li>
                                     <li><a href="http://plus.google.com/+AbhishekKumarGupta/"  target="_blank" class="transition"><i class="fa fa-google"></i></a></li>
                                     <li><a href="http://www.flickr.com/photos/iabhigupta"  target="_blank" class="transition"><i class="fa fa-flickr"></i></a></li>
 									<li><a href="http://www.behance.net/iabhigupta" target="_blank" class="transition"><i class="fa fa-behance"></i></a></li>
@@ -85,7 +85,7 @@
                                         <li class="actscroll"><a class="scroll-link" href="#sec1">Home </a></li>
                                         <li><a class="scroll-link" href="#sec2">About</a></li>
                                         <li><a class="scroll-link" href="#sec3">Works</a></li>
-                                        <li><a class="scroll-link" href="http://in.linkedin.com/in/iabhigupta/" target="_blank">Resume</a></li>
+                                        <li><a class="scroll-link" target="_blank" href="http://in.linkedin.com/in/abhiguptame/" target="_blank">Resume</a></li>
                                         <li><a class="scroll-link" href="#sec5">Skills</a></li>
 										<li><a class="scroll-link" href="#sec8">Certifications</a></li>
 										<li><a class="scroll-link" href="#sec6">Appreciations</a></li>
@@ -98,7 +98,7 @@
                         </div>
                     </header>
                     <section id="sec1" class="page-title-bg">
-                        <div class="bg bg-parallax" style="background-image: url(images/img/abhibg.jpg) "></div>
+                        <div class="bg bg-parallax" style="background-image: url(images/img/bg.jpg) "></div>
                         <div class="overlay over-op6"></div>
                         <div class="container">
                             <div class="content">
@@ -106,13 +106,14 @@
                                     <h2>Abhishek Kumar Gupta </h2>
                                     <div class="clearfix"></div>
                                     <h4>Web and Mobile application Developer &amp Designer<br><br>
-									Microsoft Student Partner<br>
-									Xamarin Student Ambassador<br>
-									Directi Campus Ambassador<br>
-									President @ Microsoft Students' Club, PES<br></h4>
+									Software Engineer @ 42Gears Mobility Systems<br>
+									Former Microsoft Student Partner<br>
+									Former Xamarin Student Ambassador<br>
+									Former Directi Campus Ambassador<br>
+									Former President @ Microsoft Students' Club, PES<br></h4>
 									<div class="clearfix"></div>
                                     <a href="#sec3" class="ajax btn flt-l  trans-btn  transition">My work</a>
-                                    <a href="http://in.linkedin.com/in/iabhigupta/" class="btn flt-l   wht-btn custom-scroll-link  transition">My resume</a>
+                                    <a href="http://in.linkedin.com/in/abhiguptame/" class="btn flt-l   wht-btn custom-scroll-link  transition">My resume</a>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +129,7 @@
                                         <div class="separator color-separator flt-l"></div>
                                         <div class="clearfix"></div>
                                         <p>I am Abhishek Kumar Gupta, 
-										pursuing B.E. in Information Science and Engineering at PES Institute Of Technology, Bangalore.
+										Software Engineer at 42Gears Mobility Systems, Bangalore.
 										I have keen interest in current trends and technology. I love playing with photoshop and design.
 										Graphic, Mobile and Web designing and development is my passion.</p>
                                     </div>
@@ -144,7 +145,7 @@
                         </div>
                     </section>
                     <section>
-                        <div class="bg bg-parallax run-par" style="background-image: url(images/img/abhibg10.JPG) "></div>
+                        <div class="bg bg-parallax run-par" style="background-image: url(images/img/bgs.jpg) "></div>
                         <div class="overlay over-op6"></div>
                         <div class="content">
                             <div class="container par-con">
@@ -239,8 +240,13 @@
                                                     <div class="custom-skillbar"></div>
                                                 </div>
 												<div class="custom-skillbar-title"><span>Android</span></div>
-                                                <div class="skill-bar-percent">45%</div>
-                                                <div class="skillbar-bg" data-percent="45%">
+                                                <div class="skill-bar-percent">55%</div>
+                                                <div class="skillbar-bg" data-percent="55%">
+                                                    <div class="custom-skillbar"></div>
+                                                </div>
+												<div class="custom-skillbar-title"><span>iOS Apps</span></div>
+                                                <div class="skill-bar-percent">55%</div>
+                                                <div class="skillbar-bg" data-percent="55%">
                                                     <div class="custom-skillbar"></div>
                                                 </div>
                                             </div>
@@ -289,6 +295,11 @@
                                                 <div class="skillbar-bg" data-percent="85%">
                                                     <div class="custom-skillbar"></div>
                                                 </div>
+												<div class="custom-skillbar-title"><span>Objective C</span></div>
+                                                <div class="skill-bar-percent">55%</div>
+                                                <div class="skillbar-bg" data-percent="55%">
+                                                    <div class="custom-skillbar"></div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -304,8 +315,8 @@
                                         <h3>Get in Touch</h3>
                                         <div class="contact-info">
                                             <ul>
-                                                <li><a href="#" target="_blank" class="ci-adress">PES Boys Hostel <br> PES University Campus <br> BSK III Stage <br> 100 FT Ring Road <br>Bangalore - 560085</a></li>
-                                                <li><a href="#" target="_blank" class="ci-mail"> abhi.ise@hotmail.com</a></li>
+                                                <li><a href="#" target="_blank" class="ci-adress">Indiranagar <br> Bangalore - 560008</a></li>
+                                                <li><a href="#" target="_blank" class="ci-mail"> abhiguptame@gmail.com</a></li>
                                                 <li> <a href="#" target="_blank" class="ci-phone">  +91 - 9480271094 </a></li>
                                             </ul>
                                         </div>
@@ -331,14 +342,10 @@
                                         <h3>Find Me</h3>
                                         <div class="social-links">
                                             <ul>
-                                                <li><a href="http://www.facebook.com/abhi.ise" target="_blank"  class="transition"><i class="fa fa-facebook"></i></a></li>                                                
+                                                <li><a href="http://www.facebook.com/abhiguptame" target="_blank"  class="transition"><i class="fa fa-facebook"></i></a></li>                                                
                                                 <li><a href="http://www.twitter.com/abhiguptame" target="_blank" class="transition"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="http://in.linkedin.com/in/iabhigupta"  target="_blank" class="transition"><i class="fa fa-linkedin"></i></a></li>
+                                                <li><a href="http://in.linkedin.com/in/abhiguptame"  target="_blank" class="transition"><i class="fa fa-linkedin"></i></a></li>
 												<li><a href="http://plus.google.com/+AbhishekKumarGupta/"  target="_blank" class="transition"><i class="fa fa-google"></i></a></li>
-												<li><a href="http://www.dribbble.com/iabhigupta/" target="_blank" class="transition"><i class="fa fa-dribbble"></i></a></li>
-                                                <li><a href="#" target="_blank" class="transition"><i class="fa fa-tumblr"></i></a></li>
-                                                <li><a href="http://www.behance.net/iabhigupta" target="_blank" class="transition"><i class="fa fa-behance"></i></a></li>
-												<li><a href="http://www.flickr.com/people/iabhigupta"  target="_blank" class="transition"><i class="fa fa-flickr"></i></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -353,11 +360,11 @@
                                 <div class="col-md-3 ">
                                     <img src="images/img/footericon.png" alt="" >
                                     <h4>Graphic, Mobile & Web Design and Development</h4>
-                                    <h5>All what you need .. !!</h5>
+                                    <h5>All what you need ... !!!</h5>
                                 </div>
                                 <div class="col-md-9">
                                     <div class="policy-box">
-                                        <p>Copyright © 2015 <br><span>Abhishek Kumar Gupta </span> </p>
+                                        <p>Copyright © 2017 <br><span>Abhishek Kumar Gupta </span> </p>
                                     </div>
                                 </div>
                             </div>
