Update contact and Home pages
Update contact and Home pages

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                             <div class="row">
                                 <div class="col-md-3 ">
                                     <img src="images/img/footericon.png" alt="" >
-                                    <h4>Graphic, Mobile & Web Design and Development</h4>
+                                    <h4>Graphics, Mobile Apps & Websites Design and Development</h4>
                                     <h5>All what you need ... !!!</h5>
                                 </div>
                                 <div class="col-md-9">
