--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> Abhishek - a learner, designer & developer</title>
+        <title> Abhishek - A learner, designer & developer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="robots" content="index, follow"/>
         <meta name="keywords" content="Abhishek Kumar Gupta, Web Developer, Web Designer, Microsoft Student Partner, Xamarin Student Ambassador,Directi Campus Ambassador, Scrollback Campus Buddy, Firefox Student Ambassador, Microsoft Student Associate, President, Microsoft Students' Club, PES"/>
@@ -61,6 +61,7 @@
                                     <li><a href="http://www.twitter.com/abhiguptame"  target="_blank" class="transition"><i class="fa fa-twitter"></i></a></li>
                                     <li><a href="http://in.linkedin.com/in/abhiguptame"  target="_blank" class="transition"><i class="fa fa-linkedin"></i></a></li>
                                     <li><a href="http://plus.google.com/+AbhishekKumarGupta/"  target="_blank" class="transition"><i class="fa fa-google"></i></a></li>
+                                    <li><a href="http://www.github.com/abhiguptame" trget="_blank" class="transition"><i class="fa fa-github"></i></a></li> 
 								</ul>
                             </div>
                         </div>
@@ -81,12 +82,12 @@
                                     <ul>
                                         <li class="actscroll"><a class="scroll-link" href="#sec1">Home </a></li>
                                         <li><a class="scroll-link" href="#sec2">About</a></li>
-                                        <li><a class="scroll-link" href="#sec3">Works</a></li>
-                                        <li><a class="scroll-link" target="_blank" href="http://in.linkedin.com/in/abhiguptame/" target="_blank">Resume</a></li>
+                                        <!--<li><a class="scroll-link" href="#sec3">Works</a></li>-->
+                                        <li><a class="scroll-link" href="#sec4">Resume</a></li>
                                         <li><a class="scroll-link" href="#sec5">Skills</a></li>
 										<li><a class="scroll-link" href="#sec8">Certifications</a></li>
 										<li><a class="scroll-link" href="#sec6">Appreciations</a></li>
-										<li><a class="scroll-link" href="#sec7">Services</a></li>
+										<li><a class="scroll-link" href="#sec7">Travel</a></li>
                                         <!--<li><a class="scroll-link" href="#sec6">Services</a></li>-->
                                     </ul>
                                 </nav>
@@ -116,7 +117,40 @@
                         </div>
                         <a class="hero-scroll-btn custom-scroll-link" href="#sec2"><i class="fa fa-angle-double-down"></i></a>
                     </section>
-                    <section class="align-text"  id="sec2">
+                    <section class=" no-padding columns-holder"  id="sec2">
+                        <div class="left-column column sh-column">
+                            <div class="bg" style="background-image: url(images/img/abhi2.jpg) "></div>
+                            <div class="overlay over-op4"></div>
+                        </div>
+                        <div class="right-column column">
+                            <div class="content">
+                                <div class="container">
+                                    <div class="row align-text">
+                                        <div class="col-md-12">
+											<h3 class="big-text">Something <span> About me  </span></h3>
+                                            <p>I am Abhishek Kumar Gupta, 
+										Software Engineer at 42Gears Mobility Systems, Bangalore.
+										I have keen interest in current trends and technology. I love playing with photoshop and design.
+										Graphic, Mobile and Web designing and development is my passion.</p>
+                                        </div>
+                                    </div>
+                                    <div class="row align-text">
+                                        <div class="col-md-12">
+                                            <h3 class="big-text">My <span>philosophy </span></h3>
+                                            <p>Learn, Develop and Share. Learn the technology, Develop using the technology and Share the experience.</p>
+                                        </div>
+                                    </div>
+                                     <div class="row align-text">
+                                        <div class="col-md-12">
+                                            <h3 class="big-text">My <span>Message</span></h3>
+                                            <p>My life is my message.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <!--<section class="align-text"  id="sec2">
                         <div class="content">
                             <div class="container">
                                 <div class="row">
@@ -140,7 +174,7 @@
                                 </div>
                             </div>
                         </div>
-                    </section>
+                    </section>-->
                     <section>
                         <div class="bg bg-parallax run-par" style="background-image: url(images/img/bgs.jpg) "></div>
                         <div class="overlay over-op6"></div>
@@ -187,6 +221,112 @@
                             </div>
                         </div>
                     </section>
+                     <section class="gray-section"  id="sec4">
+                        <div class="content">
+                            <div class="container ">
+                                <div class="section-title">
+                                    <h2>Resume</h2>
+                                    <span class="separator"></span>
+                                    <p>A learner, designer & developer.</p>
+                                </div>
+                                <div class="resume-alt">
+                                    <!-- copy code  -->
+                                    <div class="accordion" data-name="1">
+                                        <div class="accordion-title transition">
+                                            <h5><a href="#"> <i class="fa fa-briefcase"></i> August 2016-Present <span> - Software Engineer at "42Gears Mobility Systems"</span></a></h5>
+                                        </div>
+                                        <div class="accordion-inner">
+                                            <h4>Full Stack Developer</h4>
+                                            <ul>
+                                                <li>ASP.NET Web Application Development</li>
+                                                <li>Android Application Development</li>
+                                                <li>iOS Application Development</li>
+                                                <li>Cross Platform (Xamarin) Application Development</li>
+                                            </ul>
+                                            <p>
+                                                As a Software Engineer at "42Gears Mobility Systems", my role is to develop new applications as well as develop features for the existing apllications.
+                                            </p>
+                                        </div>
+                                        <div class="accordion-title transition">
+                                            <h5><a href="#"> <i class="fa fa-briefcase"></i> April 2016- June 2016 <span> - Intern at "Microsoft"</span></a></h5>
+                                        </div>
+                                        <div class="accordion-inner">
+                                            <h4>Intern (Partner Technical Consulatant)</h4>
+                                            <ul>
+                                                <li>Active Directory</li>
+                                                <li>Windows Core</li>
+                                                <li>Networking Fundamentals</li>
+                                                <li>Skype For Business</li>
+                                                <li>Office 365 </li>
+                                            </ul>
+                                            <p>
+                                                As an Intern at Microsoft, I have learned about Active Directory, Windows Core, Networking Fundamentals. I have good knowledge of Skype for Business deployment OnPremise as well as online using O365 and worked on issues related to Skype for Business.
+                                            </p>
+                                        </div>
+                                        <div class="accordion-title transition">
+                                            <h5><a href="#"> <i class="fa fa-pencil"></i> January 2015- January 2016 <span> - Intern at "DexterTalentLabs"</span></a></h5>
+                                        </div>
+                                        <div class="accordion-inner">
+                                            <h4>Android and Web Application Development Intern</h4>
+                                            <ul>
+                                                <li>Android App Development</li>
+                                                <li>Web Application Development</li>
+                                                <li>Photoshop</li>
+                                            </ul>
+                                            <p>
+                                                As an intern at "DexterTalentLabs", I have designed and developed the official website and official job application.
+                                            </p>
+                                        </div>
+                                         <div class="accordion-title transition">
+                                            <h5><a href="#"> <i class="fa fa-pencil"></i> June 2014- August 2014 <span> - Intern at "Ghar Pe Bazaar Group"</span></a></h5>
+                                        </div>
+                                        <div class="accordion-inner">
+                                            <h4>Development and Enhancement Intern</h4>
+                                            <ul>
+                                                <li>Backend Database Development</li>
+                                                <li>Web Application Development</li>
+                                                <li>Enhancement of the existing product</li>
+                                            </ul>
+                                            <p>
+                                                As an intern at "Ghar Pe Bazaar Group", I have helped in maintainance and enhancement of categorization of the products, cart handling, and user purchase history.
+                                            </p>
+                                        </div>
+                                         <div class="accordion-title transition">
+                                            <h5><a href="#"> <i class="fa fa-pencil"></i> June 2013- July 2013 <span> - Intern at "Student Nokia Developer"</span></a></h5>
+                                        </div>
+                                        <div class="accordion-inner">
+                                            <h4>Java Game Developer Intern</h4>
+                                            <ul>
+                                                <li>Java Game Development</li>
+                                                <li>Nokia Asha App Development</li>
+                                                <li>NetBeans</li>
+                                            </ul>
+                                            <p>
+                                                As an intern at "Student Nokia Developer", I have designed and developed a car game for Nokia Asha Phones named "Accelerar".
+                                            </p>
+                                        </div>
+                                        <div class="accordion-title transition">
+                                            <h5><a href="#"> <i class="fa fa-graduation-cap"></i> August 2012- June 2016 <span> - B.E. at PES Institute of Technology (Now PES University) </span></a></h5>
+                                        </div>
+                                        <div class="accordion-inner">
+                                            <h4>Information Science & Engineering Student</h4>
+                                            <ul>
+                                                <li>Microsoft Student Partner</li>
+                                                <li>Microsoft Student Associate</li>
+                                                <li>Directi Campus Ambassador</li>
+                                                <li>Xamarin Campus Ambassador</li>
+                                                <li>Founder and President at Microsoft Students' Club</li>
+                                            </ul>
+                                            <p>
+                                                As a Information Science Engineering student, I have learned depth and bredth of computer technology, programming that I like the most. I got a chance to improve my leadership skills and founded Microsoft Students' Club as a technical skill sharing platform. 
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <a href="https://drive.google.com/file/d/0B7nc62eNjfwcMWptc0lMWDJsZ0k/view?usp=sharing" target="_blank" class="btn flt-l   clr-btn anim-button       transition"><span>Download resume</span><i class="fa fa-download"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>                    
                     <section>
                         <div class="content"  id="sec5">
                             <div class="container ">
@@ -343,6 +483,7 @@
                                                 <li><a href="http://www.twitter.com/abhiguptame" target="_blank" class="transition"><i class="fa fa-twitter"></i></a></li>
                                                 <li><a href="http://in.linkedin.com/in/abhiguptame"  target="_blank" class="transition"><i class="fa fa-linkedin"></i></a></li>
 												<li><a href="http://plus.google.com/+AbhishekKumarGupta/"  target="_blank" class="transition"><i class="fa fa-google"></i></a></li>
+                                                <li><a href="http://www.github.com/abhiguptame" trget="_blank" class="transition"><i class="fa fa-github"></i></a></li> 
                                             </ul>
                                         </div>
                                     </div>
