--- a/index.html
+++ b/index.html
@@ -606,11 +606,11 @@
                                     <div class="box-item-holder">
                                         <div class="box-item bl-over">
                                             <div class="box-item-med">
-                                                <img src="images/appreciations/gfmwinner.png" alt="Google For Mobile" class="respimg">
+                                                <img src="images/appreciations/thumbs/gfmwinner.png" alt="Google For Mobile" class="respimg">
                                                 <div class="overlay"></div>
                                             </div>
                                             <div class="box-links">
-                                                <a href="https://youtu.be/HYh5MBaZyTQ" target="_blank"><i class="fa fa-link"></i></a>
+                                                <a href="https://youtu.be/HYh5MBaZyTQ" target="_blank" class="lin-h"><i class="fa fa-link"></i></a>
                                                 <a href="images/appreciations/gfmwinner.png" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
                                             </div>
                                         </div>
