Updated the Image File Format
.png to .PNG

--- a/index.html
+++ b/index.html
@@ -343,13 +343,13 @@
                                 <div class="sync-carousel-image-holder">
                                     <div id="sync-carousel-image" class="owl-carousel">
                                         <div class="item"> 
-                                            <img src="images/worked/42gearscp.png" alt="" class="respimg">
+                                            <img src="images/worked/42gearscp.PNG" alt="" class="respimg">
                                         </div>
                                         <div class="item">
-                                            <img src="images/worked/djobsapp.png" alt="" class="respimg">
+                                            <img src="images/worked/djobsapp.PNG" alt="" class="respimg">
                                         </div>
                                         <div class="item ">
-                                            <img src="images/worked/ordernowapp.png" alt="" class="respimg">
+                                            <img src="images/worked/ordernowapp.PNG" alt="" class="respimg">
                                         </div>
                                     </div>
                                 </div>
