--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </div>
                             <div class="nav-header-text">
                                 <h2>Abhishek Kumar Gupta</h2>
-                                <h3>Web and Mobile Application Developer &amp Designer</h3>
+                                <h3>Web and Mobile Application Designer &amp Developer</h3>
                             </div>
                         </div>
                         <div class="menu-holder">
@@ -633,8 +633,8 @@
                                             </div>
                                         </div>
                                         <div class="box-details">
-                                            <h3><a href="http://www.facebook.com/mscpes"  target="_blank">Microsoft Students' Club, PES </a></h3>
-                                            <h4>Founder and President</h4>
+                                            <h3><a href="http://www.facebook.com/mscpes"  target="_blank">Founder and President</a></h3>
+                                            <h4>Microsoft Students' Club, PES </h4>
                                         </div>
                                     </div>
                                 </div>                                
@@ -646,12 +646,12 @@
                                                 <div class="overlay"></div>
                                             </div>
                                             <div class="box-links">
-                                                <a href="https://drive.google.com/file/d/0B7nc62eNjfwcVEplVlRqdlRGV3M/view?usp=sharing" class="lin-h"><i class="fa fa-link"></i></a>
+                                                <a href="https://drive.google.com/file/d/0B7nc62eNjfwcVEplVlRqdlRGV3M/view?usp=sharing" target="_blank" class="lin-h"><i class="fa fa-link"></i></a>
                                                 <a href="images/appreciations/womenintech.jpg" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="box-details">
-                                            <h3><a href="#">Women In Tech</a></h3>
+                                            <h3><a href="https://drive.google.com/file/d/0B7nc62eNjfwcVEplVlRqdlRGV3M/view?usp=sharing" target="_blank">Women In Tech</a></h3>
                                             <h4>Microsoft</h4>
                                         </div>
                                     </div>
@@ -664,13 +664,13 @@
                                                 <div class="overlay"></div>
                                             </div>
                                             <div class="box-links">
-                                                <a href="https://drive.google.com/file/d/0B7nc62eNjfwcMmRWQVllTjh5MHc/view?usp=sharing" class="lin-h"><i class="fa fa-link"></i></a>
+                                                <a href="https://drive.google.com/file/d/0B7nc62eNjfwcMmRWQVllTjh5MHc/view?usp=sharing" target="_blank" class="lin-h"><i class="fa fa-link"></i></a>
                                                 <a href="images/appreciations/csrlead.jpg" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="box-details">
                                             <h3><a href="#">CSR Lead</a></h3>
-                                            <h4>PES Institute Of Technology</h4>
+                                            <h4>PES University</h4>
                                         </div>
                                     </div>
                                 </div>                                
@@ -682,17 +682,52 @@
                                                 <div class="overlay"></div>
                                             </div>
                                             <div class="box-links">
-                                                <a href="https://drive.google.com/file/d/0B7nc62eNjfwcek54RUVrNkpqbVk/view?usp=sharing" class="lin-h"><i class="fa fa-link"></i></a>
+                                                <a href="https://drive.google.com/file/d/0B7nc62eNjfwcek54RUVrNkpqbVk/view?usp=sharing" target="_blank" class="lin-h"><i class="fa fa-link"></i></a>
                                                 <a href="images/appreciations/sndpes.jpg" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="box-details">
-                                            <h3><a href="#">Student Nokia Developer </a></h3>
+                                            <h3><a href="https://drive.google.com/file/d/0B7nc62eNjfwcek54RUVrNkpqbVk/view?usp=sharing" target="_blank" >Student Nokia Developer </a></h3>
                                             <h4>Nokia</h4>
                                         </div>
                                     </div>
-                                </div>                            
-                              
+                                </div>
+                                <div class="item">
+                                    <div class="box-item-holder">
+                                        <div class="box-item bl-over">
+                                            <div class="box-item-med">
+                                                <img src="images/appreciations/samarpanavolunteer.jpg" alt="" class="respimg">
+                                                <div class="overlay"></div>
+                                            </div>
+                                            <div class="box-links">
+                                                <a href="https://drive.google.com/file/d/0B7nc62eNjfwcbXdxYkJaUU5VbkU/view?usp=sharing" target="_blank" class="lin-h"><i class="fa fa-link"></i></a>
+                                                <a href="images/appreciations/samarpanavolunteer.jpg" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="box-details">
+                                            <h3><a href="https://drive.google.com/file/d/0B7nc62eNjfwcbXdxYkJaUU5VbkU/view?usp=sharing" target="_blank" >Samarpana Volunteer</a></h3>
+                                            <h4>PES University</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="box-item-holder">
+                                        <div class="box-item bl-over">
+                                            <div class="box-item-med">
+                                                <img src="images/appreciations/sciencefestcoordinator.jpg" alt="" class="respimg">
+                                                <div class="overlay"></div>
+                                            </div>
+                                            <div class="box-links">
+                                                <a href="https://drive.google.com/file/d/0B7nc62eNjfwcaGNCbmNQM0FOMDg/view?usp=sharing" target="_blank" class="lin-h"><i class="fa fa-link"></i></a>
+                                                <a href="images/appreciations/sciencefestcoordinator.jpg" class="image-popup lin-h"><i class="fa fa-plus"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="box-details">
+                                            <h3><a href="https://drive.google.com/file/d/0B7nc62eNjfwcaGNCbmNQM0FOMDg/view?usp=sharing" target="_blank" >Science Fest Coordinator </a></h3>
+                                            <h4>PES University</h4>
+                                        </div>
+                                    </div>
+                                </div>                                                                              
                             </div>
                         </div>
                     </section>
